Fix IE layout bug (hopefully!)
Fixes #470

--- a/docs/pkgdown.css
+++ b/docs/pkgdown.css
@@ -8,18 +8,25 @@
  * .Site-content -> body > .container .row
  * .footer -> footer
  *
+ * Key idea seems to be to ensure that .container and __all its parents__
+ * have height set to 100%
+ *
  */
+
+html, body {
+  height: 100%;
+}
 
 body > .container {
   display: flex;
+  height: 100%;
   flex-direction: column;
-  min-height: 100vh;
 
   padding-top: 60px;
 }
 
 body > .container .row {
-  flex: 1;
+  flex: 1 0 auto;
 }
 
 footer {
@@ -28,6 +35,7 @@ footer {
   border-top: 1px solid #e5e5e5;
   color: #666;
   display: flex;
+  flex-shrink: 0;
 }
 footer p {
   margin-bottom: 0;
